--- a/index.html
+++ b/index.html
@@ -621,7 +621,7 @@
                <div class="col-md-7 wow fadeInUp">
                   <div id="message"></div>
 
-                  <form method="post" action="#" name="contactform" id="contact-form-handle">
+                  <form method="post" action="php/contact-form-handler.php" name="contactform" id="contact-form-handle">
                      <fieldset>
                         <input name="name" type="text" id="name" placeholder="Name" />
                         <input name="email" type="text" id="email" placeholder="Email" />
