--- a/incense-sticks.html
+++ b/incense-sticks.html
@@ -62,7 +62,7 @@
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right scroll-to">
                         <li class="active"><a href="index.html">Home</a></li>
-                        <li><a href="index.html #about">About</a></li>
+                        <li><a href="#about">About</a></li>
                         <li class="dropdown">
                             <a href="#products" class="dropdown-toggle" data-toggle="dropdown"
                                 role="button">Products<span class="caret"></span></a>
