--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div id="navbar" class="navbar-collapse collapse">
                <ul class="nav navbar-nav navbar-right scroll-to">
                   <li class="active"><a href="index.html">Home</a></li>
-                  <li><a href="#about">About</a></li>
+                  <li><a href="about.html">About</a></li>
                   <li class="dropdown">
                      <a href="#products" class="dropdown-toggle" data-toggle="dropdown" role="button">Products<span
                            class="caret"></span></a>
@@ -77,7 +77,7 @@
 
                      </ul>
                   </li>
-                  <li><a href="#contact">Contact</a></li>
+                  <li><a href="contact.html">Contact</a></li>
 
                </ul>
             </div>
