--- a/index.html
+++ b/index.html
@@ -643,6 +643,11 @@
                         <strong>Email </strong>
                      </abbr> : anshul.incense@gmail.com
                   </address>
+                  <div class="map">
+                     <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1786.0339587190704!2d74.6478297059333!3d26.453539598760802!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x396be6e70ba6adf3%3A0xfba4baa1c46f58c2!2sVinay%20Nagar%2C%20Pal%20Bhichala%2C%20Ajmer%2C%20Rajasthan%20305001!5e0!3m2!1sen!2sin!4v1628233166351!5m2!1sen!2sin"
+                        frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                  </div>
                </div>
             </div>
          </div>
